--- a/custom.css
+++ b/custom.css
@@ -4,12 +4,16 @@ body {
     font-family: 'Inter', sans-serif;
 }
 
+.btn {
+    width: 220px !important;
+}
+
 .carousel-item img {
     filter: brightness(60%);
 }
 
 .carousel-caption {
-    margin-bottom: 10rem;
+    margin-bottom: 8rem;
 }
 
 .carousel-caption h1 {
