--- a/custom.css
+++ b/custom.css
@@ -17,3 +17,25 @@ body {
 .h-text h1 {
     font-size: 4.5rem;
 }
+
+@media (max-width: 767.98px) {
+    .h-text {
+        padding-bottom: 0;
+        margin-bottom: 23px;
+        bottom: 0;
+    }
+
+    .h-text h1 {
+        font-size: 1.5rem;
+    }
+
+    .h-text p {
+        font-size: 12px;
+        line-height: 1.4;
+        margin-bottom: 10px;
+    }
+
+    .h-text button {
+        padding: 0;
+    }
+}
